# music-service

./: .gitignore  README.md  pyproject.toml  setup.sh  tasks.py
src/: main.py  middleware.py
src/clients/: spotify.py
src/routers/: auth.py  recommendations.py  simple.py
src/services/: mood_map.py  spotify.py
